--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "~/*": ["./src"],
       "@/*": ["./src"]
     },
+    "noImplicitAny": false,
   },
   "exclude": ["node_modules", "dist"]
 }
